syntax = "proto3";

import "google/protobuf/timestamp.proto";

package auto_listing.v1;

message Transaction {
    string id = 1;
    uint64 block_number = 2;
    uint64 timestamp = 3;
    uint64 gas_used = 4;
    string gas_price = 5;
    uint64 log_ordinal = 6;
    string address = 7;
    string from = 8;
    string to = 9;
}

message TokenInfo {
    string name = 1;
    string symbol = 2;
    uint64 decimals = 3;
    bool in_converter = 4;
} 

message Token {
    string addressERC20 = 1;
    string addressERC223 = 2;
    TokenInfo token_info = 3; 
}


message FeeToken {
    string address = 1;
    TokenInfo token_info = 2;
}

message ERC20WrapperCreatedEvent {
    Transaction tx = 1;
    string addressERC20 = 2;
    string addressERC223 = 3;
}

message ERC223WrapperCreatedEvent {
    Transaction tx = 1;
    string addressERC20 = 2;
    string addressERC223 = 3;
}


message Events {
    repeated ListingContractUpdated listing_contract_updateds = 1;
    repeated ListingPrice listing_prices = 2;
    repeated TokenListed token_listeds = 3;
    repeated ERC20WrapperCreatedEvent erc223_to_erc20 = 4;
    repeated ERC223WrapperCreatedEvent erc20_to_erc223 = 5;
}


message ListingContractUpdated {
    string auto_listing = 1;
    string name = 2;
    string url = 3;
    string owner = 4;
    bytes meta = 5; 
    uint64 timestamp = 6;
    Transaction tx = 7;
}

message ListingPrice {
    uint64 timestamp = 1;
    string auto_listing = 2;
    FeeToken fee_token = 3;
    string price = 4;
    Transaction tx = 6;
}

message TokenListed {
    uint64 timestamp = 1;
    string auto_listing = 2;
    Token token = 3;
    Transaction tx = 4;
}



